alignment fix

--- a/packages/spark-core/settings/_settings.scss
+++ b/packages/spark-core/settings/_settings.scss
@@ -261,7 +261,7 @@ $input-disabled-background-color: $gray !default;
 $input-disabled-border-color: $black !default;
 $input-disabled-text-color: $input-gray-medium !default;
 $helper-text-hidden: false !default;
-$text-input-padding: 3px $space-s !default;
+$text-input-padding: 3px 8px 3px 6px !default;
 $input-readonly-border-color: $black !default;
 $input-box-shadow: 0 1px 0 0 $black !default;
 $input-error-box-shadow: 0 3px 0 0 $yellow !default;
